--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "bundle/taskpaper"]
 	path = bundle/taskpaper
 	url = git@github.com:davidoc/taskpaper.vim.git
+[submodule "plugin/vim-buffergator"]
+	path = plugin/vim-buffergator
+	url = git@github.com:jeetsukumaran/vim-buffergator.git
